src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__test__result_snapshot_test_with_id_map@Case_1_vcf.snap
---
source: src/seqvars/ingest/mod.rs
expression: "std::fs::read_to_string(&args.path_out)?"
---
##fileformat=VCFv4.4
##INFO=<ID=gnomad_exomes_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD exomes">
##INFO=<ID=gnomad_exomes_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_exomes_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_exomes_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD exomes">
##INFO=<ID=gnomad_genomes_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD genomes">
##INFO=<ID=gnomad_genomes_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_genomes_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_genomes_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD genomes">
##INFO=<ID=gnomad_mtdna_an,Number=1,Type=Integer,Description="Number of alleles in gnomAD MT">
##INFO=<ID=gnomad_mtdna_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in gnomAD MT">
##INFO=<ID=gnomad_mtdna_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in gnomAD MT">
##INFO=<ID=gnomad_mtdna_hemi,Number=1,Type=Integer,Description="Number of hemi. alt. carriers in gnomAD MT">
##INFO=<ID=helix_an,Number=1,Type=Integer,Description="Number of alleles in HelixMtDb">
##INFO=<ID=helix_hom,Number=1,Type=Integer,Description="Number of hom. alt. carriers in HelixMtDb">
##INFO=<ID=helix_het,Number=1,Type=Integer,Description="Number of het. alt. carriers in HelixMtDb">
##INFO=<ID=ANN,Number=.,Type=String,Description="Functional annotations: 'Allele | Annotation | Annotation_Impact | Gene_Name | Gene_ID | Feature_Type | Feature_ID | Transcript_BioType | Rank | HGVS.c | HGVS.p | cDNA.pos / cDNA.length | CDS.pos / CDS.length | AA.pos / AA.length | Distance | Strand | ERRORS / WARNINGS / INFO'">
##FILTER=<ID=PASS,Description="All filters passed">
##FORMAT=<ID=AD,Number=R,Type=Integer,Description="Read depth for each allele">
##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Read depth">
##FORMAT=<ID=GQ,Number=1,Type=Integer,Description="Conditional genotype quality">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=PS,Number=1,Type=Integer,Description="Phase set">
##contig=<ID=1,length=249250621,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=2,length=243199373,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=3,length=198022430,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=4,length=191154276,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=5,length=180915260,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=6,length=171115067,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=7,length=159138663,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=8,length=146364022,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=9,length=141213431,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=10,length=135534747,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=11,length=135006516,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=12,length=133851895,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=13,length=115169878,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=14,length=107349540,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=15,length=102531392,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=16,length=90354753,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=17,length=81195210,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=18,length=78077248,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=19,length=59128983,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=20,length=63025520,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=21,length=48129895,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=22,length=51304566,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=X,length=155270560,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=Y,length=59373566,assembly="GRCh37",species="Homo sapiens">
##contig=<ID=MT,length=16569,assembly="GRCh37",species="Homo sapiens">
##fileDate=20230421
##SAMPLE=<ID=Case_1_father,Sex="Male",Disease="Unaffected">
##SAMPLE=<ID=Case_1_index,Sex="Female",Disease="Affected">
##SAMPLE=<ID=Case_1_mother,Sex="Female",Disease="Unaffected">
##PEDIGREE=<ID=Case_1_father>
##PEDIGREE=<ID=Case_1_index,Father="Case_1_father",Mother="Case_1_mother">
##PEDIGREE=<ID=Case_1_mother>
##x-varfish-case-uuid=00000000-0000-0000-0000-000000000000
##x-varfish-version=<ID=varfish-server-worker,Version="x.y.z">
##x-varfish-version=<ID=orig-caller,Name="GatkHaplotypeCaller",Version="3.7-0-gcfedb67">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	Case_1_father	Case_1_index	Case_1_mother
17	41249263	.	G	A	.	.	gnomad_exomes_an=31398;gnomad_exomes_hom=0;gnomad_exomes_het=56;gnomad_genomes_an=251304;gnomad_genomes_hom=0;gnomad_genomes_het=369;clinvar_vcv=VCV000055642.108;clinvar_germline_classification=Benign;ANN=A|splice_region_variant&synonymous_variant|LOW|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|8/23|c.591C>T|p.Cys197=|704/7088|591/5592|197/1864|0|-1|,A|splice_region_variant&synonymous_variant|LOW|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|7/22|c.450C>T|p.Cys150=|644/7028|450/5451|150/1817|0|-1|,A|splice_region_variant&synonymous_variant|LOW|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|7/22|c.591C>T|p.Cys197=|610/3682|591/2280|197/760|0|-1|,A|splice_region_variant&synonymous_variant|LOW|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|8/22|c.591C>T|p.Cys197=|698/3696|591/2100|197/700|0|-1|,A|splice_region_variant&synonymous_variant|LOW|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|8/24|c.591C>T|p.Cys197=|704/7151|591/5655|197/1885|0|-1|	GT:AD:DP:GQ	0/0:52,0:52:99	0/0:46,0:46:99	0/1:21,21:42:99
17	41252332	.	T	C	.	.	ANN=C|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-435A>G|p.?|555/7088|442/5592||435|-1|,C|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-435A>G|p.?|495/7028|301/5451||435|-1|,C|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-435A>G|p.?|461/3682|442/2280||435|-1|,C|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-435A>G|p.?|549/3696|442/2100||435|-1|,C|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-435A>G|p.?|555/7151|442/5655||435|-1|	GT:AD:DP:GQ	0/0:25,0:25:75	0/1:14,14:28:99	0/1:19,21:40:99
17	41252691	.	ATATAAT	A	.	.	ANN=A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-800_442-795del|p.?|555/7088|442/5592||795|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-800_301-795del|p.?|495/7028|301/5451||795|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-800_442-795del|p.?|461/3682|442/2280||795|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-800_442-795del|p.?|549/3696|442/2100||795|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-800_442-795del|p.?|555/7151|442/5655||795|-1|	GT:AD:DP:GQ	0/0:9,0:9:27	0/1:4,10:14:99	0/1:12,11:23:99
17	41252693	.	ATAAT	A	.	.	ANN=A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-800_442-797del|p.?|555/7088|442/5592||797|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-800_301-797del|p.?|495/7028|301/5451||797|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-800_442-797del|p.?|461/3682|442/2280||797|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-800_442-797del|p.?|549/3696|442/2100||797|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-800_442-797del|p.?|555/7151|442/5655||797|-1|	GT:AD:DP:GQ	0/0:9,0:9:27	0/0:14,0:14:42	0/1:11,11:22:99
17	41252695	.	AAT	A	.	.	ANN=A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-800_442-799del|p.?|555/7088|442/5592||799|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-800_301-799del|p.?|495/7028|301/5451||799|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-800_442-799del|p.?|461/3682|442/2280||799|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-800_442-799del|p.?|549/3696|442/2100||799|-1|,A|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-800_442-799del|p.?|555/7151|442/5655||799|-1|	GT:AD:DP:GQ	0/1:3,6:9:79	0/0:14,0:14:42	0/0:22,0:22:66
17	41252696	.	A	T	.	.	ANN=T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-799T>A|p.?|555/7088|442/5592||799|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-799T>A|p.?|495/7028|301/5451||799|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-799T>A|p.?|461/3682|442/2280||799|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-799T>A|p.?|549/3696|442/2100||799|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-799T>A|p.?|555/7151|442/5655||799|-1|	GT:AD:DP:GQ	0/1:6,3:9:78	0/1:10,4:14:98	0/0:22,0:22:67
17	41252697	.	A	AT	.	.	ANN=AT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-801_442-800insA|p.?|555/7088|442/5592||801|-1|,AT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-801_301-800insA|p.?|495/7028|301/5451||801|-1|,AT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-801_442-800insA|p.?|461/3682|442/2280||801|-1|,AT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-801_442-800insA|p.?|549/3696|442/2100||801|-1|,AT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-801_442-800insA|p.?|555/7151|442/5655||801|-1|	GT:AD:DP:GQ	1/1:0,45:45:99	1/0:16,17:33:99	1/0:22,11:33:99
17	41252697	.	A	ATT	.	.	ANN=ATT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.442-801_442-800insAA|p.?|555/7088|442/5592||801|-1|,ATT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.301-801_301-800insAA|p.?|495/7028|301/5451||801|-1|,ATT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.442-801_442-800insAA|p.?|461/3682|442/2280||801|-1|,ATT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.442-801_442-800insAA|p.?|549/3696|442/2100||801|-1|,ATT|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.442-801_442-800insAA|p.?|555/7151|442/5655||801|-1|	GT:AD:DP:GQ	0/0:45,0:45:99	0/1:17,16:33:99	0/1:12,21:33:99
17	41254393	.	G	T	.	.	ANN=T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|6/22|c.441+1746C>A|p.?|554/7088|441/5592||-1746|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|5/21|c.300+1746C>A|p.?|494/7028|300/5451||-1746|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|5/21|c.441+1746C>A|p.?|460/3682|441/2280||-1746|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|6/21|c.441+1746C>A|p.?|548/3696|441/2100||-1746|-1|,T|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|6/23|c.441+1746C>A|p.?|554/7151|441/5655||-1746|-1|	GT:AD:DP:GQ	0/1:29,8:37:66	./.:.:.:.	0/0:32,3:35:47
17	41273700	.	C	CA	.	.	ANN=CA|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007294.4|Coding&ManeSelect|2/22|c.80+2333_80+2334insT|p.?|193/7088|80/5592||-2334|-1|,CA|5_prime_UTR_intron_variant&intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007297.4|Coding|2/21|c.-8+2333_-8+2334insT|p.?|187/7028|-8/5451||-2334|-1|,CA|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007298.3|Coding|1/21|c.80+2333_80+2334insT|p.?|99/3682|80/2280||-2334|-1|,CA|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007299.4|Coding|2/21|c.80+2333_80+2334insT|p.?|187/3696|80/2100||-2334|-1|,CA|intron_variant|MODIFIER|BRCA1|HGNC:1100|transcript|NM_007300.4|Coding|2/23|c.80+2333_80+2334insT|p.?|193/7151|80/5655||-2334|-1|	GT:AD:DP:GQ	0/0:14,0:14:42	0/0:6,1:7:10	0/1:5,5:10:65
MT	73	.	A	G	.	.	clinvar_vcv=VCV003066071.1;clinvar_germline_classification=Affects	GT:AD:DP:GQ	0/0:3975,0:3975:99	1/1:0,2871:2871:99	1/1:0,3320:3320:99
MT	119	.	T	C	.	.	.	GT:AD:DP:GQ	0/0:5417,1:5418:99	1/1:0,4039:4039:99	1/1:1,4112:4113:99
MT	189	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:3069,0:3069:99	1/1:0,1721:1721:99	1/1:0,2204:2204:99
MT	195	.	T	C	.	.	.	GT:AD:DP:GQ	0/0:2599,0:2599:99	1/1:0,1592:1592:99	1/1:0,1815:1815:99
MT	204	.	T	C	.	.	.	GT:AD:DP:GQ	0/0:2180,0:2180:99	1/1:0,1424:1424:99	1/1:0,1304:1304:99
MT	207	.	G	A	.	.	.	GT:AD:DP:GQ	0/0:2115,0:2115:99	1/1:0,1408:1408:99	1/1:0,1277:1277:99
MT	263	.	A	G	.	.	clinvar_vcv=VCV000441147.1;clinvar_germline_classification=not provided	GT:AD:DP:GQ	1/1:0,1288:1288:99	1/1:0,1204:1204:99	1/1:0,1031:1031:99
MT	302	.	A	ACC	.	.	.	GT:AD:DP:GQ	0/1:157,687:844:99	0/0:1005,6:1011:99	0/0:800,3:803:99
MT	310	.	T	TC	.	.	.	GT:AD:DP:GQ	1/1:0,1035:1035:99	1/1:0,1411:1411:99	1/1:1,1090:1091:99
MT	477	.	T	C	.	.	.	GT:AD:DP:GQ	1/1:4,2129:2133:99	0/0:2266,1:2267:99	0/0:1725,0:1725:99
MT	709	.	G	A	.	.	.	GT:AD:DP:GQ	0/0:2494,0:2494:99	1/1:0,2186:2186:99	1/1:1,1813:1814:99
MT	750	.	A	G	.	.	clinvar_vcv=VCV000441148.2;clinvar_germline_classification=association not found	GT:AD:DP:GQ	1/1:0,2757:2757:99	1/1:0,2392:2392:99	1/1:0,1621:1621:99
MT	879	.	T	C	.	.	.	GT:AD:DP:GQ	0/0:2853,0:2853:99	0/0:2784,0:2784:99	0/1:1351,547:1898:99
MT	1243	.	T	C	.	.	clinvar_vcv=VCV000042212.5;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2674,1:2675:99	1/1:0,2198:2198:99	1/1:0,1655:1655:99
MT	1438	.	A	G	.	.	clinvar_vcv=VCV000042220.4;clinvar_germline_classification=Benign	GT:AD:DP:GQ	1/1:0,3815:3815:99	1/1:0,3653:3653:99	1/1:0,2900:2900:99
MT	1824	.	T	C	.	.	.	GT:AD:DP:GQ	1/1:0,2668:2668:99	0/0:2409,0:2409:99	0/0:1752,0:1752:99
MT	2633	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:2535,0:2535:99	0/1:1648,761:2409:99	0/0:2269,0:2269:99
MT	2706	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:3200,0:3200:99	1/1:0,2847:2847:99	1/1:0,2020:2020:99
MT	3010	.	G	A	.	.	clinvar_vcv=VCV000441149.1;clinvar_germline_classification=not provided	GT:AD:DP:GQ	1/1:0,2841:2841:99	0/0:2385,0:2385:99	0/0:1685,0:1685:99
MT	3505	.	A	G	.	.	clinvar_vcv=VCV000252456.4;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2580,14:2594:99	1/1:0,2363:2363:99	1/1:0,1664:1664:99
MT	3784	.	T	C	.	.	.	GT:AD:DP:GQ	0/1:480,2456:2936:99	0/0:2504,0:2504:99	0/0:1991,0:1991:99
MT	4769	.	A	G	.	.	clinvar_vcv=VCV000441150.2;clinvar_germline_classification=Benign	GT:AD:DP:GQ	1/1:0,2689:2689:99	1/1:0,2549:2549:99	1/1:0,2108:2108:99
MT	5046	.	G	A	.	.	clinvar_vcv=VCV000692536.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2876,2:2878:99	1/1:0,2466:2466:99	1/1:0,1661:1661:99
MT	5460	.	G	A	.	.	clinvar_vcv=VCV000692591.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2905,2:2907:99	1/1:0,2759:2759:99	1/1:2,1968:1970:99
MT	7028	.	C	T	.	.	clinvar_vcv=VCV001676315.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2577,3:2580:99	1/1:2,2201:2203:99	1/1:1,1945:1946:99
MT	7864	.	C	T	.	.	.	GT:AD:DP:GQ	0/0:3588,1:3589:99	1/1:0,3465:3465:99	1/1:0,2746:2746:99
MT	8170	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:2051,1:2052:99	1/1:0,2257:2257:99	1/1:0,1774:1774:99
MT	8251	.	G	A	.	.	.	GT:AD:DP:GQ	0/0:2360,0:2360:99	1/1:0,2317:2317:99	1/1:1,1624:1625:99
MT	8860	.	A	G	.	.	clinvar_vcv=VCV000693004.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	1/1:0,3278:3278:99	1/1:0,3088:3088:99	1/1:0,2241:2241:99
MT	8994	.	G	A	.	.	.	GT:AD:DP:GQ	0/0:2793,0:2793:99	1/1:0,2368:2368:99	1/1:1,1917:1918:99
MT	9007	.	A	G	.	.	clinvar_vcv=VCV000693051.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	1/1:0,2959:2959:99	0/0:2442,0:2442:99	0/0:1735,0:1735:99
MT	9150	.	A	G	.	.	.	GT:AD:DP:GQ	1/1:0,3163:3163:99	0/0:3538,0:3538:99	0/0:2767,0:2767:99
MT	9380	.	G	A	.	.	.	GT:AD:DP:GQ	1/1:1,3320:3321:99	0/0:3222,0:3222:99	0/0:2547,0:2547:99
MT	10097	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:2660,0:2660:99	0/1:1680,508:2188:99	0/0:1851,0:1851:99
MT	11204	.	T	C	.	.	clinvar_vcv=VCV000693352.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:3168,5:3173:99	1/1:0,2922:2922:99	1/1:0,2418:2418:99
MT	11674	.	C	T	.	.	.	GT:AD:DP:GQ	0/0:2890,0:2890:99	1/1:0,2666:2666:99	1/1:1,2179:2180:99
MT	11719	.	G	A	.	.	clinvar_vcv=VCV003027424.1;clinvar_germline_classification=association	GT:AD:DP:GQ	0/0:3339,2:3341:99	1/1:0,3052:3052:99	1/1:0,2203:2203:99
MT	11947	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:2579,2:2581:99	1/1:0,2273:2273:99	1/1:0,1804:1804:99
MT	12414	.	T	C	.	.	.	GT:AD:DP:GQ	0/0:2852,3:2855:99	1/1:1,2545:2546:99	1/1:0,1733:1733:99
MT	12648	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:1812,1:1813:99	1/1:2,1662:1664:99	1/1:4,1777:1781:99
MT	12705	.	C	T	.	.	.	GT:AD:DP:GQ	0/0:2359,10:2369:99	1/1:1,2137:2138:99	1/1:1,1621:1622:99
MT	13406	.	G	A	.	.	clinvar_vcv=VCV000693552.1;clinvar_germline_classification=Uncertain significance	GT:AD:DP:GQ	0/0:2539,1:2540:99	0/0:2216,0:2216:99	0/1:1224,733:1957:99
MT	13611	.	A	G	.	.	.	GT:AD:DP:GQ	0/0:3838,2:3840:99	1/1:0,3717:3717:99	1/1:1,2834:2835:99
MT	13928	.	G	C	.	.	clinvar_vcv=VCV000693635.1;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:2947,0:2947:99	1/1:0,2700:2700:99	1/1:0,1880:1880:99
MT	14148	.	A	G	.	.	clinvar_vcv=VCV000235351.2;clinvar_germline_classification=Likely benign	GT:AD:DP:GQ	0/0:3019,2:3021:99	1/1:0,2820:2820:99	1/1:0,1962:1962:99
MT	14766	.	C	T	.	.	clinvar_vcv=VCV000140587.4;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:3318,3:3321:99	1/1:2,3111:3113:99	1/1:3,2355:2358:99
MT	15326	.	A	G	.	.	clinvar_vcv=VCV000140592.4;clinvar_germline_classification=Benign	GT:AD:DP:GQ	1/1:0,3716:3716:99	1/1:0,3560:3560:99	1/1:0,2690:2690:99
MT	15884	.	G	C	.	.	clinvar_vcv=VCV000252455.3;clinvar_germline_classification=Benign	GT:AD:DP:GQ	0/0:3595,1:3596:99	1/1:0,3167:3167:99	1/1:1,2733:2734:99
MT	16184	.	C	T	.	.	.	GT:AD:DP:GQ	0/0:1406,1:1407:99	1/1:0,1969:1969:99	1/1:0,1478:1478:99
MT	16223	.	C	T	.	.	clinvar_vcv=VCV003027423.1;clinvar_germline_classification=association not found	GT:AD:DP:GQ	0/0:1405,1:1406:99	1/1:0,2018:2018:99	1/1:0,1472:1472:99
MT	16263	.	T	C	.	.	.	GT:AD:DP:GQ	1/1:2,1476:1478:99	0/0:1994,0:1994:99	0/0:1475,0:1475:99
MT	16292	.	C	T	.	.	.	GT:AD:DP:GQ	0/0:1652,0:1652:99	1/1:1,1913:1914:99	1/1:0,1476:1476:99
MT	16519	.	T	C	.	.	.	GT:AD:DP:GQ	1/1:0,1759:1759:99	1/1:0,4094:4094:99	1/1:0,1744:1744:99
